Удалены касты и пользовательские типы ENUM из базы данных, обновлены схемы и миграции для использования varchar. Добавлена поддержка аудита (CreatedBy, LastModifiedBy), обновлены сущности User, Card, Transaction и CardBlockRequest. Оптимизирована обработка транзакций, добавлено описание по умолчанию. Обновлена валидация номера телефона, добавлена аннотация ValidPhoneNumber. Исправлены ошибки в миграциях: изменены ID шагов и SQL данные. Мелкие изменения в логике и внедрении зависимостей для соблюдения наилучших практик.